version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/Results/CompositeFailureResults/CuntzeSettings.rst.txt
.. vale off



:class:`CuntzeSettings`
=======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.Results.CompositeFailureResults.CuntzeSettings(internalObject: Ansys.Common.Interop.DSObjectsAuto.IDSCompositeFailureCriteriaAuto)

   Bases: :py:obj:`object`


   
   Defines the configuration for the Cuntze failure criterion for reinforced materials.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CuntzeSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~Reset`
            - Resets the settings to their default values.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Active`
            - Active property.
          * - :py:attr:`~EvaluateFiberCompressionFailure`
            - Gets or sets whether fiber compression failure is evaluated. The corresponding failure label is 'cfc'
          * - :py:attr:`~EvaluateFiberTensionFailure`
            - Gets or sets whether fiber tension failure is evaluated. The corresponding failure label is 'cft'
          * - :py:attr:`~EvaluateMatrixCompressionFailure`
            - Gets or sets whether matrix compression failure is evaluated. The corresponding failure label is 'cmB'
          * - :py:attr:`~EvaluateMatrixTensionFailure`
            - Gets or sets whether matrix tension failure is evaluated. The corresponding failure label is 'cmA'
          * - :py:attr:`~EvaluateMatrixWedgeShapeFailure`
            - Gets or sets whether matrix wedge shape failure is evaluated. The corresponding failure label is 'cmC'
          * - :py:attr:`~FailureDimension`
            - Gets or sets whether the failure criterion is evaluated only in-plane (2D),
          * - :py:attr:`~FiberCompressionFailureWeightingFactor`
            - Gets or sets the weighting factor for the fiber compression failure (cfc) evaluation.
          * - :py:attr:`~FiberTensionFailureWeightingFactor`
            - Gets or sets the weighting factor for the fiber tension failure (cft) evaluation.
          * - :py:attr:`~FracturePlaneAngle`
            - Gets or sets the fracture plane angle theta.
          * - :py:attr:`~InPlaneShearFrictionCoefficient`
            - Gets or sets the in-plane shear friction coefficient b21.
          * - :py:attr:`~MatrixCompressionFailureWeightingFactor`
            - Gets or sets the weighting factor for the matrix compression failure (cmB) evaluation.
          * - :py:attr:`~MatrixTensionFailureWeightingFactor`
            - Gets or sets the weighting factor for the matrix tension failure (cmA) evaluation.
          * - :py:attr:`~MatrixWedgeShapeFailureWeightingFactor`
            - Gets or sets the weighting factor for the matrix wedge shape failure (cmC) evaluation.
          * - :py:attr:`~ModeInteractionCoefficient`
            - Gets or sets the mode interaction coefficient.
          * - :py:attr:`~OutOfPlaneShearFrictionCoefficient`
            - Gets the out-of-plane shear friction coefficient b32.







Property detail
---------------
.. py:property:: Active
   :type: Optional[bool]


   
   Active property.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateFiberCompressionFailure
   :type: Optional[bool]


   
   Gets or sets whether fiber compression failure is evaluated. The corresponding failure label is 'cfc'
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateFiberTensionFailure
   :type: Optional[bool]


   
   Gets or sets whether fiber tension failure is evaluated. The corresponding failure label is 'cft'
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateMatrixCompressionFailure
   :type: Optional[bool]


   
   Gets or sets whether matrix compression failure is evaluated. The corresponding failure label is 'cmB'
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateMatrixTensionFailure
   :type: Optional[bool]


   
   Gets or sets whether matrix tension failure is evaluated. The corresponding failure label is 'cmA'
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateMatrixWedgeShapeFailure
   :type: Optional[bool]


   
   Gets or sets whether matrix wedge shape failure is evaluated. The corresponding failure label is 'cmC'
















   ..
       !! processed by numpydoc !!

.. py:property:: FailureDimension
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.CompositeFailure.FailureDimension]


   
   Gets or sets whether the failure criterion is evaluated only in-plane (2D),
       or also in the out-of-plane direction (3D).
















   ..
       !! processed by numpydoc !!

.. py:property:: FiberCompressionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the fiber compression failure (cfc) evaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: FiberTensionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the fiber tension failure (cft) evaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: FracturePlaneAngle
   :type: Optional[float]


   
   Gets or sets the fracture plane angle theta.
       The value must be in the range [45, 90).
















   ..
       !! processed by numpydoc !!

.. py:property:: InPlaneShearFrictionCoefficient
   :type: Optional[float]


   
   Gets or sets the in-plane shear friction coefficient b21.
       The value must be greater than or equal to 0.
















   ..
       !! processed by numpydoc !!

.. py:property:: MatrixCompressionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the matrix compression failure (cmB) evaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: MatrixTensionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the matrix tension failure (cmA) evaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: MatrixWedgeShapeFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the matrix wedge shape failure (cmC) evaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: ModeInteractionCoefficient
   :type: Optional[float]


   
   Gets or sets the mode interaction coefficient.
















   ..
       !! processed by numpydoc !!

.. py:property:: OutOfPlaneShearFrictionCoefficient
   :type: Optional[float]


   
   Gets the out-of-plane shear friction coefficient b32.
       Computed from the fracture plane angle theta.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: Reset() -> None

   
   Resets the settings to their default values.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on